Fixed ribbon rendering issue on Safari. Make Grunt default to be meant for repository submission to avoid submission unnecessary files by mistake.

--- a/less/ribbons.less
+++ b/less/ribbons.less
@@ -28,37 +28,35 @@
 /* Different positions */
 
 .corner-ribbon.top-left {
-    transform-origin: top left;
     top: 100px;
     left: -40px;
     .rotate(-45deg);
+    .transform-origin(top left);
 }
 
 .corner-ribbon.top-right {
-    transform-origin: top right;
     top: 100px;
     right: -40px;
     left: auto;
     .rotate(45deg);
+    .transform-origin(top right);
 }
 
 .corner-ribbon.bottom-left {
-    transform-origin: bottom left;
     top: auto;
     bottom: 100px;
     left: -40px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+    .rotate(45deg);
+    .transform-origin(bottom left);
 }
 
 .corner-ribbon.bottom-right {
-    transform-origin: bottom right;
     top: auto;
     right: -40px;
     bottom: 100px;
     left: auto;
-    transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
+    .rotate(-45deg);
+    .transform-origin(bottom right);
 }
 /* Colors */
 
